getting important changes from por-jar branch